<resources>
    <string name="app_name">ChatX</string>
    <string name="title_chat">Chat</string>
    <string name="title_groups">Group Chat</string>
    <string name="title_phone_call">Phone</string>
    <string name="title_file_share">File share</string>
    <string name="title_accountDetails">Profile</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>