<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_group_chat"
        android:icon="@drawable/ic_baseline_groups_24"
        android:title="@string/title_groups"/>
    <item
        android:id="@+id/navigation_file_sharing"
        android:icon="@drawable/ic_baseline_folder_shared_24"
        android:title="@string/title_file_share"/>

    <item
        android:id="@+id/navigation_phone_call"
        android:icon="@drawable/ic_baseline_phone_24"
        android:title="@string/title_phone_call" />

    <item
        android:id="@+id/navigation_account_details"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_accountDetails" />

</menu>